@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,6 +26,7 @@ import org.asciidoctor.gradle.jvm.AbstractAsciidoctorTask;
 import org.asciidoctor.gradle.jvm.AsciidoctorJExtension;
 import org.asciidoctor.gradle.jvm.AsciidoctorJPlugin;
 import org.asciidoctor.gradle.jvm.AsciidoctorTask;
+import org.gradle.api.JavaVersion;
 import org.gradle.api.Project;
 import org.gradle.api.tasks.PathSensitivity;
 import org.gradle.api.tasks.Sync;
@@ -106,9 +107,9 @@ class AsciidoctorConventions {
 	private void createAsciidoctorExtensionsConfiguration(Project project) {
 		project.getConfigurations().create(EXTENSIONS_CONFIGURATION_NAME, (configuration) -> {
 			project.getConfigurations().matching((candidate) -> "dependencyManagement".equals(candidate.getName()))
-					.all((dependencyManagement) -> configuration.extendsFrom(dependencyManagement));
+					.all(configuration::extendsFrom);
 			configuration.getDependencies().add(project.getDependencies()
-					.create("io.spring.asciidoctor.backends:spring-asciidoctor-backends:0.0.2"));
+					.create("io.spring.asciidoctor.backends:spring-asciidoctor-backends:0.0.3"));
 			configuration.getDependencies()
 					.add(project.getDependencies().create("org.asciidoctor:asciidoctorj-pdf:1.5.3"));
 		});
@@ -118,12 +119,13 @@ class AsciidoctorConventions {
 		asciidoctorTask.configurations(EXTENSIONS_CONFIGURATION_NAME);
 		configureCommonAttributes(project, asciidoctorTask);
 		configureOptions(asciidoctorTask);
+		configureForkOptions(asciidoctorTask);
 		asciidoctorTask.baseDirFollowsSourceDir();
 		createSyncDocumentationSourceTask(project, asciidoctorTask);
-		if (asciidoctorTask instanceof AsciidoctorTask) {
-			boolean pdf = asciidoctorTask.getName().toLowerCase().contains("pdf");
+		if (asciidoctorTask instanceof AsciidoctorTask task) {
+			boolean pdf = task.getName().toLowerCase().contains("pdf");
 			String backend = (!pdf) ? "spring-html" : "spring-pdf";
-			((AsciidoctorTask) asciidoctorTask).outputOptions((outputOptions) -> outputOptions.backends(backend));
+			task.outputOptions((outputOptions) -> outputOptions.backends(backend));
 		}
 	}
 
@@ -134,6 +136,14 @@ class AsciidoctorConventions {
 		attributes.put("spring-boot-artifactory-repo", ArtifactoryRepository.forProject(project));
 		attributes.put("revnumber", null);
 		asciidoctorTask.attributes(attributes);
+	}
+
+	// See https://github.com/asciidoctor/asciidoctor-gradle-plugin/issues/597
+	private void configureForkOptions(AbstractAsciidoctorTask asciidoctorTask) {
+		if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+			asciidoctorTask.forkOptions((options) -> options.jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+					"--add-opens", "java.base/java.io=ALL-UNNAMED"));
+		}
 	}
 
 	private String determineGitHubTag(Project project) {
