@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -41,7 +41,6 @@ import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.JarOutputStream;
 import java.util.jar.Manifest;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
 
@@ -455,6 +454,39 @@ abstract class AbstractBootArchiveIntegrationTests {
 		assertExtractedLayers(layerNames, indexedLayers);
 	}
 
+	@TestTemplate
+	void classesFromASecondarySourceSetCanBeIncludedInTheArchive() throws IOException {
+		writeMainClass();
+		File examplePackage = new File(this.gradleBuild.getProjectDir(), "src/secondary/java/example");
+		examplePackage.mkdirs();
+		File main = new File(examplePackage, "Secondary.java");
+		try (PrintWriter writer = new PrintWriter(new FileWriter(main))) {
+			writer.println("package example;");
+			writer.println();
+			writer.println("public class Secondary {}");
+		}
+		catch (IOException ex) {
+			throw new RuntimeException(ex);
+		}
+		BuildResult build = this.gradleBuild.build(this.taskName);
+		assertThat(build.task(":" + this.taskName).getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
+		try (JarFile jarFile = new JarFile(new File(this.gradleBuild.getProjectDir(), "build/libs").listFiles()[0])) {
+			Stream<String> classesEntryNames = jarFile.stream().filter((entry) -> !entry.isDirectory())
+					.map(JarEntry::getName).filter((name) -> name.startsWith(this.classesPath));
+			assertThat(classesEntryNames).containsExactly(this.classesPath + "example/Main.class",
+					this.classesPath + "example/Secondary.class");
+		}
+	}
+
+	@TestTemplate
+	void javaVersionIsSetInManifest() throws IOException {
+		BuildResult result = this.gradleBuild.build(this.taskName);
+		assertThat(result.task(":" + this.taskName).getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
+		try (JarFile jarFile = new JarFile(new File(this.gradleBuild.getProjectDir(), "build/libs").listFiles()[0])) {
+			assertThat(jarFile.getManifest().getMainAttributes().getValue("Build-Jdk-Spec")).isNotEmpty();
+		}
+	}
+
 	private void copyMainClassApplication() throws IOException {
 		copyApplication("main");
 	}
@@ -553,9 +585,12 @@ abstract class AbstractBootArchiveIntegrationTests {
 		for (String layerName : layerNames) {
 			File layer = new File(root, layerName);
 			assertThat(layer).isDirectory();
-			extractedLayers.put(layerName,
-					Files.walk(layer.toPath()).filter((path) -> path.toFile().isFile()).map(layer.toPath()::relativize)
-							.map(Path::toString).map(StringUtils::cleanPath).collect(Collectors.toList()));
+			List<String> files;
+			try (Stream<Path> pathStream = Files.walk(layer.toPath())) {
+				files = pathStream.filter((path) -> path.toFile().isFile()).map(layer.toPath()::relativize)
+						.map(Path::toString).map(StringUtils::cleanPath).toList();
+			}
+			extractedLayers.put(layerName, files);
 		}
 		return extractedLayers;
 	}
