@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,7 +30,6 @@ import java.util.function.Consumer;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
 
@@ -59,10 +58,10 @@ abstract class AbstractArchiveIntegrationTests {
 	}
 
 	protected AssertProvider<JarAssert> jar(File file) {
-		return new AssertProvider<JarAssert>() {
+		return new AssertProvider<>() {
 
 			@Override
-			@Deprecated
+			@Deprecated(since = "2.3.0", forRemoval = false)
 			public JarAssert assertThat() {
 				return new JarAssert(file);
 			}
@@ -75,17 +74,20 @@ abstract class AbstractArchiveIntegrationTests {
 			return Collections.emptyMap();
 		}
 		Map<String, List<String>> index = new LinkedHashMap<>();
+		String layerPrefix = "- ";
+		String entryPrefix = "  - ";
 		ZipEntry indexEntry = jarFile.getEntry(getLayersIndexLocation());
 		try (BufferedReader reader = new BufferedReader(new InputStreamReader(jarFile.getInputStream(indexEntry)))) {
 			String line = reader.readLine();
 			String layer = null;
 			while (line != null) {
-				if (line.startsWith("- ")) {
-					layer = line.substring(3, line.length() - 2);
+				if (line.startsWith(layerPrefix)) {
+					layer = line.substring(layerPrefix.length() + 1, line.length() - 2);
 					index.put(layer, new ArrayList<>());
 				}
-				else if (line.startsWith("  - ")) {
-					index.computeIfAbsent(layer, (key) -> new ArrayList<>()).add(line.substring(5, line.length() - 1));
+				else if (line.startsWith(entryPrefix)) {
+					index.computeIfAbsent(layer, (key) -> new ArrayList<>())
+							.add(line.substring(entryPrefix.length() + 1, line.length() - 1));
 				}
 				line = reader.readLine();
 			}
@@ -95,6 +97,22 @@ abstract class AbstractArchiveIntegrationTests {
 
 	protected String getLayersIndexLocation() {
 		return null;
+	}
+
+	protected List<String> readClasspathIndex(JarFile jarFile, String location) throws IOException {
+		List<String> index = new ArrayList<>();
+		String entryPrefix = "- ";
+		ZipEntry indexEntry = jarFile.getEntry(location);
+		try (BufferedReader reader = new BufferedReader(new InputStreamReader(jarFile.getInputStream(indexEntry)))) {
+			String line = reader.readLine();
+			while (line != null) {
+				if (line.startsWith(entryPrefix)) {
+					index.add(line.substring(entryPrefix.length() + 1, line.length() - 1));
+				}
+				line = reader.readLine();
+			}
+		}
+		return index;
 	}
 
 	static final class JarAssert extends AbstractAssert<JarAssert, File> {
@@ -160,10 +178,8 @@ abstract class AbstractArchiveIntegrationTests {
 
 		ListAssert<String> entryNamesInPath(String path) {
 			List<String> matches = new ArrayList<>();
-			withJarFile((jarFile) -> withEntries(jarFile,
-					(entries) -> matches.addAll(entries.map(ZipEntry::getName)
-							.filter((name) -> name.startsWith(path) && name.length() > path.length())
-							.collect(Collectors.toList()))));
+			withJarFile((jarFile) -> withEntries(jarFile, (entries) -> matches.addAll(entries.map(ZipEntry::getName)
+					.filter((name) -> name.startsWith(path) && name.length() > path.length()).toList())));
 			return new ListAssert<>(matches);
 		}
 
@@ -210,6 +226,11 @@ abstract class AbstractArchiveIntegrationTests {
 
 			ManifestAssert hasAttribute(String name, String value) {
 				assertThat(this.actual.getMainAttributes().getValue(name)).isEqualTo(value);
+				return this;
+			}
+
+			ManifestAssert doesNotHaveAttribute(String name) {
+				assertThat(this.actual.getMainAttributes().getValue(name)).isNull();
 				return this;
 			}
 
